# bdd

./: .gitignore  Cargo.toml  README.md  inject.sh  install.sh  run
.github/workflows/: release.yml
EX02/: 01_ALL_configura-rede.bash  02_ALL_verifica-rede.bash  README.md
EX03/: 01_MGM_instala-gerenciador.bash  02_N1-N2_instala-no-de-dados.bash  03_MGM_verifica-cluster.bash  04_N1_cria-banco-e-insere.bash  05_N2_verifica-replicacao.bash  README.md
EX04/: README.md  cenarios.bash
EX05/: 01_N1_cria-tabela-particionada.bash  02_N1_distribuicao-particoes.bash  README.md
EX08/: 00_ALL_libera-memoria.bash  01_ALL_configura-rede.bash  02_ALL_configura-cassandra.bash  README.md  cassandra-uso.bash
src/: detect.rs  inject.rs  main.rs  model.rs  state.rs  ui.rs
