[package]
name = "bdd"
version = "0.2.0"
edition = "2021"
description = "CLI para os exercícios de Projeto de Banco de Dados Distribuídos (FATEC-SJC)"

[[bin]]
name = "bdd"
path = "src/main.rs"

[dependencies]
# usado só pelo `bdd inject` (host) para a interface interativa (TUI)
crossterm = "0.28"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
